--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit Entry</th>
+            <th scope="col">Delete Entry</th>
           </tr>
         </thead>
         <tbody>
@@ -32,8 +34,9 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><a href="/urls/<%= id %>" class="btn btn-secondary">Edit</a></td>
               <td>
-                <form method="POST" action="/urls/9sm5xK/delete">
+                <form method="POST" action="/urls/<%= id %>/delete">
                   <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
               </td>
