--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form action="/login" method="POST">
+      <input type="text" name="username" placeholder="Enter Username" required>
+      <button type="submit">Login</button>
+    </form>
   </nav>
 </header>
