--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <form action="/login" method="POST">
-      <input type="text" name="username" placeholder="Enter Username" required>
-      <button type="submit">Login</button>
-    </form>
+    <% if (typeof username !== 'undefined' && username) { %>
+      <div class="navbar-text">
+        Logged in as: <%= username %>
+      </div>
+      <form action="/logout" method="POST">
+        <button type="submit">Logout</button>
+      </form>
+    <% } else { %>
+      <form action="/login" method="POST">
+        <input type="text" name="username" placeholder="Enter Username" required>
+        <button type="submit">Login</button>
+      </form>
+      <% } %>
   </nav>
 </header>
