--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -8,14 +8,12 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - Registration Form</title>
+    <title>URL - Login Form</title>
   </head>
-  <%- include('partials/_header') %>
+  <%- include('./partials/_header') %>
   <main style="margin: 1em">
-
-  <div class="registration-form">
-    <h3>Register</h3>
-    <form method="POST" action="/register">
+    <h3>Login</h3>
+    <form method="POST" action="/login">
       <div class="form-group mb-2">
         <label for="email">Email Address:</label>
         <input
@@ -36,7 +34,8 @@
           style="width: 500px"
         />
       </div>
+      <button type="submit" class="btn btn-primary">Login</button>
+      <a href="/register">Don't have an account? Register here.</a>
     </form>
-  </div>
-
+  </main>
 </html>
