--- a/views/user_reg.ejs
+++ b/views/user_reg.ejs
@@ -36,6 +36,9 @@
           style="width: 500px"
         />
       </div>
+      <!-- Registration Submit Button -->
+      <button type="submit" class="btn btn-primary">Register</button>
+    </form>
     </form>
   </div>
 
