--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -17,12 +17,13 @@
 
     <title>New URL - TinyApp Example</title>
   </head>
-
   <body>
     <%- include('partials/_header') %>
-
     <main style="margin: 1em;">
       <h3>Create TinyURL</h3>
+      <% if (!user) { %>
+        <p>You must be logged in to create a TinyURL. <a href="/login">Login here</a></p>
+      <% } else { %>
       <form class="form-inline" action="/urls" method="POST">
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
@@ -36,7 +37,8 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
-    </main>
+    <% } %>
+  </main>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
