--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -38,6 +38,9 @@
         />
       </div>
       <button type="submit" class="btn btn-primary">Login</button>
+      <% if (typeof error !== 'undefined' && error !== null) { %>
+        <a href="/register">Don't have an account? Register here.</a>
+      <% } %>
       <a href="/register">Don't have an account? Register here.</a>
     </form>
   </main>
